<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_YOUPod" />

    <item
        android:id="@+id/navigation_YOUFeed"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_YOUFeed" />

    <item
        android:id="@+id/navigation_YOURPod"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/title_YOURPod" />
    <item
        android:id="@+id/navigation_subscribe"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/title_subscribe" />

</menu>
