<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff3e6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_YOUFeed"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="@font/marvel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="#fff3e6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="403dp"
        android:layout_height="112dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:srcCompat="@drawable/podcast" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="154dp"
        android:layout_height="115dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/this_is_the_first_podcast_audio_file"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="154dp"
        android:layout_height="118dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/this_is_the_second_podcast_audio_file"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="154dp"
        android:layout_height="113dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/this_is_the_third_podcast_audio_file"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/feed_podcast_b1"
        android:layout_width="244dp"
        android:layout_height="116dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/images"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/feed_podcast_b2"
        android:layout_width="244dp"
        android:layout_height="116dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_podcast_b1"
        app:srcCompat="@drawable/maxresdefault"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/feed_podcast_b3"
        android:layout_width="244dp"
        android:layout_height="116dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_podcast_b2"
        app:srcCompat="@drawable/podcastbanner2"
        android:contentDescription="@string/todo" />


</androidx.constraintlayout.widget.ConstraintLayout>