<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff3e6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_YOUPod"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="@font/marvel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="#fff3e6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="395dp"
        android:layout_height="595dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/scrollView2">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="378dp"
                android:layout_height="158dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/homebanner" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="255dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/review_of_the_day"
                android:textColor="@color/design_default_color_primary"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="155dp"
                android:layout_height="133dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:srcCompat="@drawable/homepic1" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="134dp"
                android:layout_height="128dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="56dp"
                android:layout_marginRight="56dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:srcCompat="@drawable/homepic2" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="67dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/news"
                android:textColor="@color/design_default_color_primary"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="148dp"
                android:layout_height="128dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:srcCompat="@drawable/homepic3" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="217dp"
                android:layout_height="256dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/the_football_weekly_pod_squad_bring_you_a_twice_weekly_dose_of_puns_and_punditry_news_and_analysis_from_the_premier_league_and_beyond_throughout_the_season_join_max_rushden_barry_glendenning_sid_lowe_and_the_rest_of_the_pod_squad_every_monday_and_thursday_throughout_the_season_for_your_dose_of_puns_and_punditry_and_the_best_analysis_of_the_premier_league_european_football_and_beyond"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="218dp"
                android:layout_height="200dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/uk_politics_weekly_the_guardian_s_heather_stewart_and_pippa_crerar_are_joined_every_week_by_commentators_experts_and_politicians_to_unpack_the_biggest_stories_in_politics"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="148dp"
                android:layout_height="133dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="145dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView9"
                app:srcCompat="@drawable/homepic4" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="148dp"
                android:layout_height="148dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="84dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView10"
                app:srcCompat="@drawable/homepic5" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="223dp"
                android:layout_height="402dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="8dp"
                android:text="@string/science_weekly_the_award_winning_science_weekly_podcast_is_the_best_place_to_learn_about_the_big_discoveries_and_debates_in_biology_chemistry_physics_and_sometimes_even_maths_the_guardian_science_team_nicola_davis_ian_sample_and_hannah_devlin_meet_the_great_thinkers_and_doers_in_science_and_technology_recent_shows_include_the_neuroscience_of_decision_making"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

